--- a/assets/styles/bootstrap-overrides.less
+++ b/assets/styles/bootstrap-overrides.less
@@ -20,16 +20,16 @@ img {
 }
 
 // Custom link styles within bodies of text
-h1, h2, h3, h4, h5, h6, p, li, blockquote, label {
-  >a:not(.btn), small >a:not(.btn) {
-    color: @brand;
+/*h1, h2, h3, h4, h5, h6, p, li, blockquote, label {
+  >a:not(.btn), small > a:not(.btn) {
+    //color: @brand;
     border-bottom: 1px solid @text-normal;
     &:hover {
       text-decoration: none;
       color: @text-normal;
     }
   }
-}
+}*/
 
 blockquote {
   border-left: 3px solid @border-lt-gray;
@@ -84,7 +84,7 @@ blockquote {
         position: absolute;
         right: -5px;
         top: -5px;
-        background-image: url('/images/icon-close.png');
+        //background-image: url('/images/icon-close.png');
         background-size: 20px;
         background-repeat: no-repeat;
         background-position: center;
@@ -109,7 +109,7 @@ blockquote {
         margin-bottom: 10px;
         width: 100px;
         height: 2px;
-        border-top: 2px solid @brand;
+        //border-top: 2px solid @brand;
       }
     }
     .modal-body {
