--- a/assets/styles/pages/account/account-overview.less
+++ b/assets/styles/pages/account/account-overview.less
@@ -7,7 +7,7 @@
   }
 
   .remove-button {
-    color: @brand;
+    //color: @brand;
     text-decoration: underline;
     cursor: pointer;
     &:hover {
