--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,7 +5,7 @@
 } %><!DOCTYPE html>
 <html>
   <head>
-    <title>NEW_APP_NAME</title>
+    <title>Позитив+</title>
 
     <% /* Viewport tag for sensible mobile support */ %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -177,7 +177,7 @@
           <small class="nav-item"><a class="nav-link text-info" href="/logout">Sign out</a></small>
           <% } %>
         </div>
-        <small class="copy">Copyright &copy; 2019 <a target="_blank" href="NEW_APP_COMPANY_ABOUT_HREF">NEW_APP_COMPANY_NAME</a>. <br class="xs-only"/>All rights reserved.</small>
+        <small class="copy">Copyright &copy; 2019 <a target="_blank" href="NEW_APP_COMPANY_ABOUT_HREF">Pozitiv+</a>. <br class="xs-only"/>All rights reserved.</small>
       </footer>
     </div>
 
@@ -211,6 +211,7 @@
     <script src="/dependencies/cloud.js"></script>
     <script src="/dependencies/core.min.js"></script>
     <script src="/dependencies/html5shiv.min.js"></script>
+    <script src="/dependencies/locale_ru.js"></script>
     <script src="/dependencies/moment.js"></script>
     <script src="/dependencies/parasails.js"></script>
     <script src="/dependencies/pointer-events.min.js"></script>
