--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -45,23 +45,9 @@
     <link rel="stylesheet" href="/styles/css/bootstrap.css">
     <link rel="stylesheet" href="/styles/css/style.css">
     <link rel="stylesheet" href="/styles/importer.css">
-    <link rel="stylesheet" href="/styles/skins/borderlessdark/skin.css">
-    <link rel="stylesheet" href="/styles/skins/borderlessdark3d/skin.css">
-    <link rel="stylesheet" href="/styles/skins/borderlesslight/skin.css">
-    <link rel="stylesheet" href="/styles/skins/borderlesslight3d/skin.css">
-    <link rel="stylesheet" href="/styles/skins/carousel/skin.css">
-    <link rel="stylesheet" href="/styles/skins/darkskin/skin.css">
-    <link rel="stylesheet" href="/styles/skins/defaultskin/skin.css">
-    <link rel="stylesheet" href="/styles/skins/fullwidth/skin.css">
-    <link rel="stylesheet" href="/styles/skins/fullwidthdark/skin.css">
-    <link rel="stylesheet" href="/styles/skins/glass/skin.css">
-    <link rel="stylesheet" href="/styles/skins/lightskin/skin.css">
-    <link rel="stylesheet" href="/styles/skins/minimal/skin.css">
-    <link rel="stylesheet" href="/styles/skins/noskin/skin.css">
-    <link rel="stylesheet" href="/styles/skins/v5/skin.css">
     <!--STYLES END-->
 
-
+    <script src="js/html5shiv.min.js"></script>
   </head>
   <body>
   <!-- Yandex.Metrika counter -->
