--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -46,8 +46,10 @@
     <link rel="stylesheet" href="/styles/css/style.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
+    <![endif]-->
 
-    <script src="js/html5shiv.min.js"></script>
   </head>
   <body>
   <!-- Yandex.Metrika counter -->
@@ -293,6 +295,7 @@
     <script src="/dependencies/core.min.js"></script>
     <script src="/dependencies/bootstrap.min.js"></script>
     <script src="/dependencies/cloud.js"></script>
+    <script src="/dependencies/html5shiv.min.js"></script>
     <script src="/dependencies/locale_ru.js"></script>
     <script src="/dependencies/parasails.js"></script>
     <script src="/dependencies/pointer-events.min.js"></script>
@@ -303,7 +306,6 @@
     <script src="/js/components/js-timestamp.component.js"></script>
     <script src="/js/components/modal.component.js"></script>
     <script src="/js/utilities/open-stripe-checkout.js"></script>
-    <script src="/js/html5shiv.min.js"></script>
     <script src="/js/pages/498.page.js"></script>
     <script src="/js/pages/account/account-overview.page.js"></script>
     <script src="/js/pages/account/edit-password.page.js"></script>
