--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -136,7 +136,9 @@
                         <div class="unit flex-row unit-spacing-xs align-items-center">
                           <div class="unit-left"><span
                                     class="icon icon-xxs icon-primary fa-map-marker"></span></div>
-                          <div class="unit-body"><a class="link-secondary"  title="Посмотреть на карте" target="_blank" href="https://goo.gl/maps/gmHHBtpJ6gL2"><?=$address?></a></div>
+                          <div class="unit-body"><a class="link-secondary"  title="Посмотреть на карте" target="_blank" href="https://goo.gl/maps/gmHHBtpJ6gL2">
+                              119071 г. Москва ул. Ленинский пр-т, д. 19 стр. 1
+                            </a></div>
                         </div>
                       </li>
                       <li>
@@ -295,7 +297,6 @@
     <script src="/dependencies/core.min.js"></script>
     <script src="/dependencies/bootstrap.min.js"></script>
     <script src="/dependencies/cloud.js"></script>
-    <script src="/dependencies/html5shiv.min.js"></script>
     <script src="/dependencies/locale_ru.js"></script>
     <script src="/dependencies/parasails.js"></script>
     <script src="/dependencies/pointer-events.min.js"></script>
