--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1757,85 +1757,85 @@ html .button-ebony-clay:hover .icon.text-primary {
 .icon-1:before {
 	width: 47px;
 	height: 48px;
-	background: url("../../images/icon-1.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-1.png") no-repeat top left;
 }
 
 .icon-2:before {
 	width: 41px;
 	height: 43px;
-	background: url("../../images/icon-2.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-2.png") no-repeat top left;
 }
 
 .icon-3:before {
 	width: 47px;
 	height: 46px;
-	background: url("../../images/icon-3.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-3.png") no-repeat top left;
 }
 
 .icon-4:before {
 	width: 52px;
 	height: 35px;
-	background: url("../../images/icon-4.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-4.png") no-repeat top left;
 }
 
 .icon-5:before {
 	width: 48px;
 	height: 48px;
-	background: url("../../images/icon-5.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-5.png") no-repeat top left;
 }
 
 .icon-6:before {
 	width: 42px;
 	height: 52px;
-	background: url("../../images/icon-6.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-6.png") no-repeat top left;
 }
 
 .icon-7:before {
 	width: 42px;
 	height: 49px;
-	background: url("../../images/icon-7.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-7.png") no-repeat top left;
 }
 
 .icon-8:before {
 	width: 44px;
 	height: 40px;
-	background: url("../../images/icon-8.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-8.png") no-repeat top left;
 }
 
 .icon-9:before {
 	width: 40px;
 	height: 42px;
-	background: url("../../images/icon-9.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-9.png") no-repeat top left;
 }
 
 .icon-10:before {
 	width: 53px;
 	height: 50px;
-	background: url("../../images/icon-10.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-10.png") no-repeat top left;
 }
 
 .icon-11:before {
 	width: 53px;
 	height: 50px;
-	background: url("../../images/icon-11.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-11.png") no-repeat top left;
 }
 
 .icon-12:before {
 	width: 49px;
 	height: 43px;
-	background: url("../../images/icon-12.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-12.png") no-repeat top left;
 }
 
 .icon-13:before {
 	width: 52px;
 	height: 53px;
-	background: url("../../images/icon-13.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-13.png") no-repeat top left;
 }
 
 .icon-14:before {
 	width: 55px;
 	height: 46px;
-	background: url("../../images/icon-14.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-14.png") no-repeat top left;
 }
 
 @font-face {
@@ -16004,7 +16004,7 @@ form.label-outside .form-validation {
 .textarea-lined-wrap {
 	position: relative;
 	line-height: 1;
-	background: url("../../images/textarea-pattern-light.png") repeat;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/textarea-pattern-light.png") repeat;
 }
 
 .textarea-lined-wrap textarea {
@@ -18590,7 +18590,7 @@ blockquote cite {
 	top: 10px;
 	left: 0;
 	opacity: 0.5;
-	background: url("../../images/icon-quote.png") no-repeat top left;
+	background: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/icon-quote.png") no-repeat top left;
 }
 
 .quote-simple q {
@@ -33763,7 +33763,7 @@ html.boxed .rd-navbar--is-clone {
 	top: 0;
 	right:0;
 	left: 0;
-	background-image: url("/images/corporation_label.svg");
+	background-image: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/corporation_label.svg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -33772,13 +33772,13 @@ html.boxed .rd-navbar--is-clone {
 
 
 .label.small.white::after {
-	background-image: url("/images/corporation_label_white.svg");
+	background-image: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/corporation_label_white.svg");
 }
 .label.small.gold::after {
-	background-image: url("/images/corporation_label_gold.svg");
+	background-image: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/corporation_label_gold.svg");
 }
 .label.small.blue::after {
-	background-image: url("/images/corporation_label_blue.svg");
+	background-image: url("https://d3a1wbnh2r1l7y.cloudfront.net/pozitiv/corporation_label_blue.svg");
 }
 
 
